# CryptoContainer

./: .gitignore  .gitmodules  NOTICE  README.md  keystore.properties.example  settings.gradle.kts
.github/workflows/: publish-release.yml
LICENSES/: FatFs.txt  README.md
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/dev/alsatianconsulting/cryptocontainer/validation/: FeatureDiagnosticTest.kt  NtfsIntegrityValidationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  cryptocore.cpp  exfat_mkfs_bridge.c  exfat_mkfs_bridge.h  vc_compat.h  vc_config.h  vc_stubs.cpp
app/src/main/java/dev/alsatianconsulting/cryptocontainer/: CryptoContainerApp.kt  MainActivity.kt  MountController.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/crypto/: AESCrypt.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/jni/: CryptoNative.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/manager/: AESCryptManager.kt  VeraCryptManager.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/model/: VcEntry.kt  VcFsInfo.kt  VolumeCreateOptions.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/provider/: VolumeProvider.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/repo/: VeraCryptRepo.kt  VeraCryptRepository.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/service/: MountNotificationChannel.kt  MountService.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/ui/: AESCryptScreen.kt  CreationWizard.kt  KeyfilePickerField.kt  SecureTextField.kt  VcBrowser.kt  VeraCryptScreen.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/util/: ClipboardWatcher.kt  FileHelpers.kt  InactivityTimer.kt  StringSanitizer.kt
app/src/main/java/dev/alsatianconsulting/cryptocontainer/viewmodel/: ShareViewModel.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/dev/alsatianconsulting/cryptocontainer/crypto/: AESCryptRoundTripTest.kt
app/src/test/java/dev/alsatianconsulting/cryptocontainer/provider/: VolumeProviderNtfsFlowTest.kt
app/src/test/java/dev/alsatianconsulting/cryptocontainer/repo/: VeraCryptRepoNtfsFlowTest.kt
app/src/test/java/dev/alsatianconsulting/cryptocontainer/util/: StringSanitizerTest.kt
docs/: architecture.md  data-safety.md  play-store-listing.md  privacy-policy.md  release-notes-1.0.0.md  release-notes-1.0.md
scripts/: build_exfat.sh  build_native.sh  build_ntfs.sh  notes_porting_veracrypt.md  publish_github_wiki.sh
scripts/validation/: Invoke-NtfsChkdskValidation.ps1  README.md  run_android_ntfs_validation.sh  run_ntfs_validation_pipeline.sh
wiki/: AESCrypt.md  Buttonology.md  Data-Flows.md  Home.md  Quick-Start.md  Runtime-and-Security.md  Share-and-Open-Flows.md  Troubleshooting.md  VeraCrypt-Create-Volume.md  VeraCrypt-Explorer.md  VeraCrypt-Main-Screen.md  _Sidebar.md
